AX: wrong Enabled states on a ListBox https://bugs.webkit.org/show_bug.cgi?id=104483

Patch by Alejandro Piñeiro <apinheiro@igalia.com> on 2012-12-10
Reviewed by Chris Fleizach.

Source/WebCore:

Test: accessibility/listbox-enabled-states.html

* accessibility/AccessibilityListBoxOption.cpp:
(WebCore::AccessibilityListBoxOption::isEnabled): taking into
account the DISABLED attribute and the aria-disabled attribute to
decide if the item is enabled or not.

LayoutTests:

* accessibility/listbox-enabled-states-expected.txt: Added.
* accessibility/listbox-enabled-states.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@137168 bbb929c8-8fbe-4397-9dbb-9b2b20218538